--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     ],
     "homepage": "https://github.com/abordage/eloquent-percentile",
     "require": {
-        "php": "^7.4 || ^8.0 || ^8.1",
+        "php": ">=7.4",
         "illuminate/support": "^8.0 || ^9.0"
     },
     "require-dev": {
