--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,15 +12,21 @@ jobs:
         stability: [ prefer-stable ]
         os: [ ubuntu-latest ]
         php: [7.4, 8.0, 8.1]
-        laravel: [8.*, 9.*]
+        laravel: [8.*, 9.*, 10.*]
         include:
           - laravel: 8.*
             testbench: ^6.0
           - laravel: 9.*
             testbench: ^7.0
+          - laravel: 10.*
+            testbench: ^8.0
         exclude:
           - php: 7.4
             laravel: 9.*
+          - php: 7.4
+            laravel: 10.*
+          - php: 8.0
+            laravel: 10.*
 
     name: Laravel ${{ matrix.laravel }} on PHP ${{ matrix.php }}
 
