--- a/.github/workflows/update-changelog.yml
+++ b/.github/workflows/update-changelog.yml
@@ -1,4 +1,4 @@
-name: "Update Changelog"
+name: Update Changelog
 
 on:
   release:
@@ -7,6 +7,9 @@ on:
 jobs:
   update:
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: write
 
     steps:
       - name: Checkout code
@@ -24,5 +27,5 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
           branch: ${{ github.event.release.target_commitish }}
-          commit_message: update CHANGELOG
+          commit_message: Update CHANGELOG
           file_pattern: CHANGELOG.md
