--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,7 +11,7 @@ jobs:
       matrix:
         stability: [ prefer-stable ]
         os: [ ubuntu-latest ]
-        php: [7.4, 8.0, 8.1]
+        php: [7.4, 8.0, 8.1, 8.2]
         laravel: [8.*, 9.*, 10.*]
         include:
           - laravel: 8.*
@@ -27,6 +27,8 @@ jobs:
             laravel: 10.*
           - php: 8.0
             laravel: 10.*
+          - php: 8.2
+            laravel: 8.*
 
     name: Laravel ${{ matrix.laravel }} on PHP ${{ matrix.php }}
 
@@ -39,7 +41,7 @@ jobs:
         with:
           php-version: ${{ matrix.php }}
           tools: composer:v2, phpunit
-          coverage: xdebug
+          coverage: none
 
       - name: Setup PostgreSQL
         uses: ikalnytskyi/action-setup-postgres@v4
@@ -56,10 +58,3 @@ jobs:
 
       - name: Run tests
         run: vendor/bin/phpunit
-
-      - name: Upload coverage results to Coveralls
-        env:
-          COVERALLS_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          composer global require php-coveralls/php-coveralls
-          php-coveralls --coverage_clover=build/logs/clover.xml -v
