--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         {
             "name": "Pavel Bychko",
             "email": "box@abordage.dev",
+            "homepage": "https://abordage.dev",
             "role": "Developer"
         }
     ],
