--- a/.github/workflows/php-cs-fixer.yml
+++ b/.github/workflows/php-cs-fixer.yml
@@ -14,4 +14,4 @@ jobs:
           tools: cs2pr, phpcs
 
       - name: Run phpcs
-        run: phpcs -q --report=checkstyle src | cs2pr
+        run: phpcs --report=checkstyle | cs2pr
