--- a/composer.json
+++ b/composer.json
@@ -23,15 +23,14 @@
     "homepage": "https://github.com/abordage/eloquent-percentile",
     "require": {
         "php": ">=7.4",
-        "illuminate/support": "^8.0 || ^9.0 || ^10.0"
+        "illuminate/support": "^8.0 || ^9.0 || ^10.0 || ^11.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
-        "nunomaduro/collision": "^5.0 || ^6.0 || ^7.0",
+        "nunomaduro/collision": "^5.0 || ^6.0 || ^7.0 || ^8.0",
         "nunomaduro/larastan": "^1.0 || ^2.0",
-        "orchestra/testbench": "^6.0 || ^7.0 || ^8.0",
-        "phpstan/phpstan": "^1.0",
-        "phpunit/phpunit": "^9.5 || ^10.0"
+        "orchestra/testbench": "^6.0 || ^7.0 || ^8.0 || ^9.0",
+        "phpunit/phpunit": "^9.6 || ^10.0"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
