feat: add Laravel 12 support and update project dependencies
- Updated `composer.json` to require PHP 8.2+ and Illuminate support for Laravel 11-12.
- Removed support for PHP versions below 8.2 and Laravel versions below 11.
- Updated GitHub workflows for compatibility with Laravel 12 and modern PHP versions.
- Adjusted README.md to reflect updated version support.
- Replaced deprecated PHPStan and Larastan configurations with updated rules.
- Updated `.php-cs-fixer.dist.php` for improved coding standards.

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -4,7 +4,7 @@ on: [ push, pull_request ]
 
 jobs:
   coverage:
-    name: Laravel 10 on PHP 8.2
+    name: Laravel 12 on PHP 8.2
     runs-on: ubuntu-latest
 
     steps:
@@ -28,7 +28,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          composer require "laravel/framework=10.0" "orchestra/testbench=^8.0" --no-update
+          composer require "laravel/framework=12.*" "orchestra/testbench=^10.0" --no-update
           composer update --prefer-dist --no-interaction --no-progress
 
       - name: Run tests
