--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         "Eloquent median",
         "Eloquent percentile",
         "Eloquent withMedian",
-        "Eloquent withPercentile"
+        "Eloquent withPercentile",
+        "Laravel 11",
+        "Laravel 12"
     ],
     "authors": [
         {
@@ -22,17 +24,17 @@
     ],
     "homepage": "https://github.com/abordage/eloquent-percentile",
     "require": {
-        "php": ">=7.4",
-        "illuminate/support": "^8.0 || ^9.0 || ^10.0 || ^11.0"
+        "php": "^8.2",
+        "illuminate/support": "^11.0 || ^12.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
-        "nunomaduro/collision": "^5.0 || ^6.0 || ^7.0 || ^8.0",
-        "nunomaduro/larastan": "^1.0 || ^2.0",
-        "orchestra/testbench": "^6.0 || ^7.0 || ^8.0 || ^9.0",
-        "phpunit/phpunit": "^9.6 || ^10.0"
+        "larastan/larastan": "^2.9 || ^3.0",
+        "nunomaduro/collision": "^8.0",
+        "orchestra/testbench": "^9.0 || ^10.0",
+        "phpunit/phpunit": "^10.0 || ^11.0"
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true,
     "autoload": {
         "psr-4": {
